# father-summary-api

./: main.py  pyproject.toml  requirements.txt
app/: crud.py  database.py  main.py
app/api/endpoints/: main.py  projects.py
app/migrations/: alembic.ini
app/migrations/alembic/: env.py
app/migrations/alembic/versions/: 4bce21647b1c_initial_migration.py  73f67f431cb2_initial_migration.py  987c4c265c0c_initial_migration.py  bf64ea6b206c_initial_migration1.py  dec22624692d_initial_migration.py
app/models/: project.py
scripts/: populate_database.py  projects_data.json
