[tool.poetry]
name = "fathersummary"
version = "0.1.0"
description = ""
authors = ["Damil Berdyev <berdyev.damil1@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.23"
psycopg2 = "^2.9.2"
alembic = "^1.13.1"
mangum = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
